Fix step alignment on firefox

--- a/src/stylesheets/objects/code_block.styl
+++ b/src/stylesheets/objects/code_block.styl
@@ -27,6 +27,7 @@ Styleguide 13.0
     overflow-x: hidden
     display: inline-flex
     flex-wrap: nowrap
+    vertical-align: middle
     width: 100%
 
   &__language
